Fixes menu appearing behind forums z-index

--- a/app/assets/stylesheets/layout/_navigation.scss
+++ b/app/assets/stylesheets/layout/_navigation.scss
@@ -135,7 +135,7 @@ ul.navigation {
         visibility: hidden;
         pointer-events: none;
         opacity: 0;
-        z-index: 10;
+        z-index: 150;
         top: 60px;
         left: 0;
         min-width: 100%;
