--- a/app/assets/stylesheets/pages/_forums.scss
+++ b/app/assets/stylesheets/pages/_forums.scss
@@ -3,7 +3,6 @@
 */
 
 #forums {
-  z-index: 100;
   position: relative;
 
   .topic-controls {
